test/files/continuations-neg/t3628.check
t3628.scala:4: error: not found: type Actor
  val impl: Actor = actor {
            ^
one error found
